# Claude

./: .env.example  .gitignore  .gitmodules  .mcp.json  00-tov-language-reference.md  00-tov.md  01-plp-intro-copy.md  01-plp-intros.md  02-metadata-generation.md  03-inlink-migration.md  04-content-analysis.md  05-faq-category-copy.md  06-internal-linking.md  07-aeo-optimisation.md  08-eav-mapping.md  09-ai-visibility-polling.md  CLAUDE.md  MHTML_Parser.py  PLP-Batch-Production-Brief-2026-03-19.md  PROJECT-STATUS.md  README.md  TGG - SEO WIP _ SM - PLP Intro (Brand Cat).csv  build_competitor_corpus.py  build_site_dashboard.py  check-status.py  check_gmc_feed.py  claude.md  cli.py  config.py  crawl_from_sitemap.py  crawl_site_snapshot.py  filter_outlinks.py  ga4-traffic-acquisition-20260130-20260429.csv  generate_aeo_report.py  generate_recommendations.py  gtmetrix_client.py  ingest_cf_logpush.py  llm_judge.py  llms.txt  main.py  (+18 more)
.claude/: mcp-actions.json  settings.json  settings.local.json.example
.devcontainer/: devcontainer.json  setup.sh
aeo/: index.html
agent/: hooks.py  orchestrator.py  progress.py  subagents.py
archive/: run_aeo_local.py
background/: legacy_context.md
chat_ui/: server.py
context_mode/: server.py
data/: sitemap_audit_latest.csv
docs/: TGG_Skills_Audit_2026-05-01.md  content-engineering-charter.md  index.html  tgg_conversation_index_alltime.md
gtmetrix_results/: latest.json  raw_sample.json
memory/: decisions.md  learnings.md  open_questions.md  patterns.md
notes/: ideas.md  notes.md
prompts/: analysis_prompt.md  (+3 more)
(+1106 files in other folders)
